<resources>
    <string name="app_name">TETRISEC</string>
    <string name="shared_preference">userInfo</string>

    <!--Ingame-->
    <string name="game_over">Game Over</string>
    <string name="restart">Restart</string>
    <string name="control_error">You have accelerometer as default controller</string>
    <string name="request">It is needed to save your scores</string>

    <!-- main activity-->
    <string name="credits">Credits</string>
    <string name="play">Play</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="settings">Settings</string>
    <string name="scores">Scores</string>
    <string name="how_to_play">Learning</string>

    <!--Credits-->
    <string name="presents">Presents:</string>
    <string name="amov">Mobile Architecture 2016/17</string>
    <string name="lets_the_song_ends">You could have at least, listen all song</string>

    <!-- Scores -->
    <string name="score">SCORE</string>
    <string name="date">DATE</string>
    <string name="points">Points</string>

    <!-- YES/NO resources -->
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <!-- Strings related to Settings -->
    <string name="title_activity_settings">SETTINGS</string>
    <string name="difficulty">Difficulty</string>
    <string name="control_type">Control</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="saved">Saved</string>
    <string name="easy">for Babies like you</string>
    <string name="medium">Well well well</string>
    <string name="hard">I dare you</string>
    <string name="ninja">Are you a f*cking ninja?</string>
    <string name="asian">Are you an Asian God?</string>
    <string name="sensor_error">No accelerometer avaliable</string>
    <string name="level">Level: </string>
    <string name="music">Music</string>
    <string name="tetris_sound">Old Tetris Sound</string>

    <!-- MULTIPLAYER -->
    <string name="server">Host a game</string>
    <string name="client">Join a game</string>
    <string name="ip">Ask your friend to join this ip:</string>
    <string name="hosting">HOSTING...</string>
    <string name="joining">JOINING...</string>
    <string name="join">Join</string>
    <string name="join_message">Insert the ip address:</string>
    <string name="win">You Win</string>
    <string name="lose">You Lose</string>
    <string name="next">Next</string>
    <string name="invalid_address">Please Enter a valid address</string>
    <string name="lost_connection">Lost Connection</string>
    <string name="share_button">Share</string>
    <string name="share">Share your address</string>
    <string name="come_play_with_me">Come play TETRISEC with me with this at this address:</string>
    <string name="no_internet">You have no internet connection</string>
    <string name="connect">Connect</string>

    <!-- Statistic -->
    <string name="statistic">Statistic</string>
    <string name="simple">Simple Lines:</string>
    <string name="double_line">Double Lines:</string>
    <string name="triple">Triple Lines:</string>
    <string name="clear">Tetris Clear Lines:</string>
    <string name="time">Game Duration:</string>
    <string name="secs">seconds</string>
    <string name="best_score">OHOH Look this my amazing score</string>

    <!-- Learning -->
    <string name="tetromino">Tetromino</string>
    <string name="line">Line</string>
    <string name="controller">Controller</string>
    <string name="text_one">"Tetriminos" are game pieces shaped like tetrominoes, geometric shapes composed of four square blocks each. A random sequence of Tetriminos fall down the playing field (a rectangular vertical shaft, called the "well" or "matrix"). The objective of the game is to manipulate these Tetriminos, by moving each one sideways</string>
    <string name="text_two">The aim of creating a horizontal line of ten units without gaps. When such a line is created, it disappears, and any block above the deleted line will fall. </string>
    <string name="text_three">Activate the accelerometer option and the game will be played with this functionality you have rotate the phone through left and right, for moving the tetromino, and get it into you to rotate the tetromino </string>
    <string name="text_four">For a default controller, u click on the half of the screen and the side pressed is the same side that tetromino fall. By press rotate button, tetromino will rotate.</string>
</resources>
