<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.isec.tetris.Multiplayer.ServerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/hosting"
            android:typeface="monospace" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:typeface="monospace"
            android:id="@+id/textViewIP" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">
        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">
        </LinearLayout>

        <Button

            android:drawableLeft="@drawable/share"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:text="@string/share_button"
            android:textColor="@android:color/white"
            android:typeface="monospace"
            android:id="@+id/button_share"
            android:layout_height="wrap_content" />
        <Button

            android:drawableLeft="@drawable/wifi"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:text="@string/connect"
            android:textColor="@android:color/white"
            android:typeface="monospace"
            android:id="@+id/button_open_wifi"
            android:layout_height="wrap_content" />

    </LinearLayout>


</FrameLayout>
